// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches locked snapshot 1`] = `
<button
  className="Die Die-locked"
  onClick={[Function]}
>
  1
</button>
`;

exports[`matches unlocked snapshot 1`] = `
<button
  className="Die"
  onClick={[Function]}
>
  1
</button>
`;
